# mynd-firmware-test

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  software_manifest.md  teufel-pre-push  teufel-prepare-commit-msg
.github/workflows/: ci.yml  docker-publish.yml
Projects/Mynd/: CMakeLists.txt  changelog.md  mynd-bundle.json  mynd-complete.JLinkScript  mynd-factory-complete.JLinkScript  mynd-factory.JLinkScript  mynd-offset.JLinkScript  mynd.JLinkScript  tests_power_states.txt
Projects/Mynd/docs/: charger.puml  power_on_button.puml  power_on_usb.puml  soc.puml
Projects/Mynd/src/: CMakeLists.txt  FreeRTOSConfig.h  config.h  main.cpp  stm32f0xx_hal_conf.h  stm32f0xx_it.c
Projects/Mynd/src/battery/: CMakeLists.txt  battery.cpp  battery.h
Projects/Mynd/src/battery/battery_indicator/: CMakeLists.txt  battery_indicator.cpp  battery_indicator.h
Projects/Mynd/src/battery/charge_controller/: CMakeLists.txt  charge_controller.cpp  charge_controller.h
Projects/Mynd/src/battery/soc_estimator/: CMakeLists.txt  soc_estimator.cpp  soc_estimator.h
Projects/Mynd/src/battery/temperature/: CMakeLists.txt  temperature.cpp  temperature.h
Projects/Mynd/src/board/: CMakeLists.txt  board_link.h
Projects/Mynd/src/board/amps/: CMakeLists.txt  board_link_amps.c  board_link_amps.h  compress_headers.py  eco_5805_channel_config.h  eco_5805_channel_config_cmpr.h  eco_5805_config.h  eco_5805_config_cmpr.h  eco_5805_eco_mode_config.h  eco_5805_eco_mode_config_cmpr.h  eco_5805_patch_to_bypass_mode.h  eco_5805_patch_to_bypass_mode_cmpr.h  eco_5805_test.h  eco_5805_test_cmpr.h  eco_5805_treble_config.h  eco_5805_treble_config_cmpr.h  eco_5825_bass_config.h  eco_5825_bass_config_cmpr.h  eco_5825_channel_config.h  eco_5825_channel_config_cmpr.h  eco_5825_config.h  eco_5825_config_cmpr.h  eco_5825_eco_mode_config.h  eco_5825_eco_mode_config_cmpr.h  eco_5825_patch_to_bypass_mode.h  eco_5825_patch_to_bypass_mode_cmpr.h
Projects/Mynd/src/board/bluetooth/: CMakeLists.txt  board_link_bluetooth.c  board_link_bluetooth.h
Projects/Mynd/src/board/boost_converter/: CMakeLists.txt  board_link_boost_converter.c  board_link_boost_converter.h
Projects/Mynd/src/board/charger/: CMakeLists.txt  board_link_charger.c  board_link_charger.h
Projects/Mynd/src/board/eeprom/: CMakeLists.txt  board_link_eeprom.c  board_link_eeprom.h
Projects/Mynd/src/board/hw_revision/: CMakeLists.txt  board_link_hw_revision.c  board_link_hw_revision.h
Projects/Mynd/src/board/io_expander/: CMakeLists.txt  board_link_io_expander.c  board_link_io_expander.h
Projects/Mynd/src/board/moisture_detection/: CMakeLists.txt  board_link_moisture_detection.c  board_link_moisture_detection.h
Projects/Mynd/src/board/plug_detection/: CMakeLists.txt  board_link_plug_detection.c  board_link_plug_detection.h
Projects/Mynd/src/board/power_supply/: CMakeLists.txt  board_link_power_supply.c  board_link_power_supply.h
Projects/Mynd/src/board/usb_pd_controller/: CMakeLists.txt  board_link_usb_pd_controller.c  board_link_usb_pd_controller.h
Projects/Mynd/src/board/usb_switch/: CMakeLists.txt  board_link_usb_switch.c  board_link_usb_switch.h
Projects/Mynd/src/bsp/: CMakeLists.txt  board.c  board.h  board_hw.h  board_msp.c
Projects/Mynd/src/bsp/adc/: CMakeLists.txt  bsp_adc.c  bsp_adc.h
Projects/Mynd/src/bsp/bluetooth_uart/: CMakeLists.txt  bsp_bluetooth_uart.c  bsp_bluetooth_uart.h
Projects/Mynd/src/bsp/debug_uart/: CMakeLists.txt  bsp_debug_uart.c
Projects/Mynd/src/bsp/shared_i2c/: CMakeLists.txt  bsp_shared_i2c.c
Projects/Mynd/src/bsp/usb_pd_i2c/: CMakeLists.txt  bsp_usb_pd_i2c.c  bsp_usb_pd_i2c.h
Projects/Mynd/src/factory/: CMakeLists.txt  tests.cpp  tests.h
Projects/Mynd/src/leds/: CMakeLists.txt  leds.cpp  leds.h
Projects/Mynd/src/leds/pattern/generic_rgb/: generic_rgb.h
Projects/Mynd/src/persistent_storage/: CMakeLists.txt  e_config.c  e_config.h  eeprom_config.h  kvstorage.h
Projects/Mynd/src/tasks/: CMakeLists.txt  task_priorities.h
Projects/Mynd/src/tasks/audio/: CMakeLists.txt  task_audio.cpp  task_audio.h
Projects/Mynd/src/tasks/bluetooth/: CMakeLists.txt  task_bluetooth.h
Projects/Mynd/src/tasks/system/: CMakeLists.txt  task_system.cpp  task_system.h
Projects/Mynd/src/tshell/: CMakeLists.txt  tshell.c  tshell.h  tshell_args_parser.c  tshell_args_parser.h  tshell_printf.c  tshell_printf.h
Projects/Mynd/src/ux/audio/: audio.h
Projects/Mynd/src/ux/bluetooth/: bluetooth.h
Projects/Mynd/src/ux/input/: input.h
Projects/Mynd/src/ux/system/: system.h
Projects/MyndBootloader/: CMakeLists.txt  changelog.md  dfu_mcu.c  dfu_mcu.h  main.c  mynd-bootloader.JLinkScript  stm32f0xx_hal_conf.h  stm32f0xx_it.c  stm32f0xx_it.h  t_boot_config.h  t_boot_stm32_config.h
Projects/MyndBootloader/board/io_expander/: board_link_io_expander.c  board_link_io_expander.h
Projects/MyndBootloader/board/power_supply/: board_link_power_supply.c  board_link_power_supply.h
Projects/MyndBootloader/board/usb_switch/: board_link_usb_switch.c  board_link_usb_switch.h
Projects/MyndBootloader/bsp/: board.c  board.h  board_hw.h  board_msp.c
Projects/MyndBootloader/bsp/debug_uart/: bsp_debug_uart.c  bsp_debug_uart.h
Projects/MyndBootloader/bsp/shared_i2c/: bsp_shared_i2c.c  bsp_shared_i2c.h
drivers/platform/stm32/: i2c.c  i2c.h  i2c_freertos.c  i2c_freertos.h
firmwares/dsp/: 20240726D_TAS5805M_TW_B-A.ppc3  20240726D_TAS5805M_TW_B-A_Ecomode.ppc3  20240726D_delay54_TAS5825P_WF.ppc3  20240726D_delay54_TAS5825P_WF_Ecomode.ppc3
gitversion/: gitversion.h.in  version.h
support/cmake/: FindCMSIS.cmake  FindDRIVERS.cmake  FindHAL.cmake  FindSEGGER.cmake  FindUSBDevice.cmake  deploy.cmake  format.cmake  gitversion.cmake  stm32_gcc.cmake  stm32_linker.cmake  utils.cmake
support/cmake/stm32/: common.cmake  f4.cmake  g4.cmake  h7.cmake  l4.cmake  linker_ld.cmake  u5.cmake  utilities.cmake  wb.cmake  wl.cmake
support/docker-build/: docker-run.sh  docker-unittest.sh  readme.md
support/docker-build/docker-config/: Dockerfile  (+1 more)
support/scripts/: prepare_update.py
(+1 files in other folders)
