[project]
name = "mynd-firmware-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crcmod>=1.7",
    "google>=3.0.0",
    "grpcio-tools>=1.75.1",
    "intelhex>=2.3.0",
    "protobuf>=6.32.1",
    "python3-protobuf>=2.5.0",
    "wget>=3.2",
]
